WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172105
Compile error, include file is not found.
https://bugs.webkit.org/show_bug.cgi?id=172105
Summary
Compile error, include file is not found.
Per Arne Vollan
Reported
2017-05-15 00:41:46 PDT
The include file <WebKitAdditions/VideoToolBoxEncoderMac.mm> is not found. This file is included in WebCore/platform/mediastream/libwebrtc/H264VideoToolBoxEncoder.mm.
Attachments
Patch
(1.63 KB, patch)
2017-05-15 00:48 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-05-15 00:48:47 PDT
Created
attachment 310116
[details]
Patch
Brent Fulgham
Comment 2
2017-05-15 10:21:28 PDT
Comment on
attachment 310116
[details]
Patch Looks reasonable. r=me.
Per Arne Vollan
Comment 3
2017-05-15 23:57:44 PDT
(In reply to Brent Fulgham from
comment #2
)
> Comment on
attachment 310116
[details]
> Patch > > Looks reasonable. r=me.
Thanks for reviewing!
WebKit Commit Bot
Comment 4
2017-05-16 00:11:59 PDT
Comment on
attachment 310116
[details]
Patch Clearing flags on attachment: 310116 Committed
r216912
: <
http://trac.webkit.org/changeset/216912
>
WebKit Commit Bot
Comment 5
2017-05-16 00:12:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug