Compile error, include file is not found. https://bugs.webkit.org/show_bug.cgi?id=172105

Reviewed by Brent Fulgham.

Use __has_include to detect if include file exists.

* platform/mediastream/libwebrtc/H264VideoToolBoxEncoder.mm:


Canonical link: https://commits.webkit.org/189082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216912 268f45cc-cd09-0410-ab3c-d52691b4dbfc